# LATAIF

./: .gitignore  AUTO_UPDATE_SETUP.md  Plan Chef.txt  RELEASE_NOTES_v0.8.14.md  RELEASE_NOTES_v0.8.15.md  RELEASE_NOTES_v0.8.16.md  RELEASE_NOTES_v0.8.17.md  RELEASE_NOTES_v0.8.18.md  RELEASE_NOTES_v0.8.19.md  RELEASE_NOTES_v0.8.20.md  RELEASE_NOTES_v0.8.21.md  RELEASE_NOTES_v0.8.22.md  RELEASE_NOTES_v0.8.23.md  build_exe.bat  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: release.mjs  setup-env.ps1
scripts/d4/: d4c_changelog_dry_run.mjs  d4d_changelog_migrate.mjs
server/: .gitignore  Cargo.toml  README.md
server/src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  money.rs  route_tests.rs  routes.rs
server/src/authoritative_sync/: bridge.rs  mod.rs  tests.rs
server/src/migrations/: mod.rs  tests.rs  v0001_authoritative_operations.rs
server/src/operations/: mod.rs  tests.rs
server/src/protocol/: canonical.rs  cursor.rs  envelope.rs  error.rs  identity.rs  integer.rs  mod.rs  operation_type.rs  ordinal.rs  result.rs  schema.rs
server/tests/: a0b_protocol_parity.rs
src/: App.tsx  main.tsx  sql-js.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  printing.rs
src-tauri/src/media/: detect.rs  ingest.rs  ingest_tests.rs  mod.rs  normalize.rs  storage.rs  tests.rs
src-tauri/src/sync/: auth.rs  authority.rs  canonical.rs  cas_engine.rs  credentials.rs  cutover.rs  db.rs  device.rs  install_id.rs  migrations.rs  mobile_page.rs  mod.rs  models.rs  primary.rs  recovery.rs  recovery_entry.rs  routes.rs  secret.rs  sync_policy.rs  sync_schema.rs  transfer.rs  transfer_e2e.rs  trust_root.rs
src/components/agents/: TransferTable.tsx
src/components/ai/: MessagePreviewModal.tsx
src/components/charts/: GaugeChart.tsx  PillBarChart.tsx  TopProductsList.tsx
src/components/contacts/: DuplicateWarningBanner.tsx
src/components/customers/: QuickCustomerModal.tsx
src/components/employees/: StaffFilterPill.tsx  StaffSelect.tsx
src/components/expenses/: PayExpenseModal.tsx  PaySupplierModal.tsx
src/components/layout/: PageLayout.tsx  Sidebar.tsx
src/components/print/: PrintItemsFilterModal.tsx
src/components/products/: NewProductModal.tsx  ProductHoverCard.tsx
src/components/repairs/: SettleGoldModal.tsx
src/components/shared/: ConfirmTaxSchemeModal.tsx  ErrorBoundary.tsx  GlobalSearch.tsx  HistoryPanel.tsx  UpdateBanner.tsx
src/components/sync/: SyncDuplicateGuard.tsx
src/components/ui/: Bhd.tsx  Button.tsx  Card.tsx  DuplicateWarningModal.tsx  ImageLightbox.tsx  ImageUpload.tsx  Input.tsx  KPICard.tsx  Modal.tsx  NumberTypeDialog.tsx  PhoneInput.tsx  SearchSelect.tsx  SkuInput.tsx  SoftWarn.tsx  StatusDot.tsx  VIPBadge.tsx
src/components/work-orders/: AddMaterialModal.tsx  CancelOrderModal.tsx  MaterialsCard.tsx  OrderLineEditModal.tsx  SourceItemsModal.tsx
src/core/agent/: economics.ts
src/core/ai/: ai-service.ts  business-engine.ts  business-tools.ts  ocr-service.ts  pii.ts
src/core/audit/: audit-log.ts
src/core/auth/: auth.ts
src/core/automation/: automation-handlers.ts  daily-sweep.ts
src/core/consignment/: economics.ts
src/core/contacts/: contact-validate.ts  country-codes-store.ts  country-codes.ts  duplicate-check.ts
src/core/credit/: overpayment-teardown.ts
src/core/db/: atomic-persist.ts  database.ts  db-lifecycle.ts  helpers.ts  media-schema.ts  schema.sql  transaction-context.ts
src/core/events/: event-bus.ts
src/core/finance/: card-fee-booking.ts  card-fees.ts  expenseCreditAllocation.ts  expenseSettlement.ts  (+2 more)
src/hooks/: useGoBack.ts  usePermission.ts  useProductMediaPresentation.ts
src/stores/: agentStore.ts  authStore.ts  bankingStore.ts  consignmentStore.ts  creditNoteStore.ts  customerMessageStore.ts  customerStore.ts  debtStore.ts  documentStore.ts  employeeStore.ts  expenseStore.ts  goldStore.ts  invoiceStore.ts  metalStore.ts  offerStore.ts  orderPaymentStore.ts  orderStore.ts  partnerStore.ts  payablesStore.ts  productStore.ts  productionStore.ts  purchaseStore.ts  recurringExpenseStore.ts  repairStore.ts  salesReturnStore.ts  scrapTradeStore.ts  supplierStore.ts  taskStore.ts
src/styles/: globals.css
test/a0a/: README.md  a0a-control.json  a0a-observed-defect-signature.json  a0a-report.md  a0a-run1.json  a0a-run2.json  client.mjs  coordinator.mjs
test/a0b/: README.md  protocol-spec.md  report.md  verify-node.mjs
test/a0b/rust-verifier/: Cargo.toml
test/a0b/rust-verifier/src/: main.rs
test/b1/: README.md  harness.ts  migration.test.ts
test/b2/: credit-teardown.test.ts
test/b3/: sales-metrics-return.smoke.mjs  sales-metrics-return.test.ts
test/b4/: nbr-export-quantity.test.ts
test/b5/: order-stock-guards.browser-smoke.mjs  order-stock-guards.test.ts
test/d2/: atomic-persist.test.ts
test/d3/: safe-purge.test.ts
test/d4/: changelog-logic.test.ts  dry-run.test.ts  migrate.test.ts
test/dblifecycle/: db-lifecycle.test.ts
test/e1/: edit-reason.test.ts
test/f1/: hardening.test.ts
test/fixtures/: sync-identifier-vectors.json  sync-payload-vectors.json
test/m2/: mobile-sync-durable-cursor.test.ts
test/m3/: updater-durable-flush.test.ts
test/m4/: close-performance-audit.mjs  window-close-persistence.test.ts
test/m5/: reload-persistence.test.ts
test/m6b0/: save-track-durability.test.ts
test/m6b2a/: static-primary.test.ts
test/m6b2de4/: identifier-apply-behavior.test.ts  identifier-grammar.test.ts
test/m6b3a/: existing-client-upgrade.test.ts  manifest-drift.test.ts  quarantine-cursor.test.ts  stale-replay-unchanged.test.ts
test/media03a/: core-schema.test.ts  full-init.test.ts  schema-classification.test.ts  sync-contract.test.ts
test/media03b/: rotation-backup.test.ts
test/media04a2b1/: coordinator.test.ts
test/media04a2b2/: orchestrator.test.ts
test/media04a3a/: gallery-and-resolver.test.ts
test/media04a3ar2/: replace-remove-scope.test.ts
test/media04a3b1/: media-presentation.test.ts
test/x3/: import-hardening.test.ts
(+125 files in other folders)
