[package]
name = "lataif-server"
version = "0.1.0"
edition = "2021"
description = "LATAIF Sync Server — REST API for multi-device synchronization"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.35", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9"
bcrypt = "0.17"
uuid = { version = "1", features = ["v4", "v5"] }
unicode-normalization = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
# test-only: drive the real Axum routes via `oneshot` for the B0 auth/HTTP contract.
tower = { version = "0.5", features = ["util"] }
