[package]
name = "lataif"
version = "0.8.21"
description = "LATAIF — Luxury Trading Operating System"
authors = ["LATAIF"]
edition = "2021"

[lib]
name = "lataif_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Sync server (embedded)
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.35", features = ["bundled"] }
jsonwebtoken = "9"
bcrypt = "0.17"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# LAN auto-discovery
mdns-sd = "0.13"
local-ip-address = "0.6"

# HTTPS fuer die Mobile-Seite (Live-Kamera braucht secure context) — selbst-signiert
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = "0.23"

# M5-B — native WebView2-Reload-Bruecke (F5/Ctrl+R). Nur Windows. Bewusst auf die von wry
# bereits transitiv genutzten Versionen unifiziert (Cargo.lock pinnt webview2-com 0.38.2 /
# windows 0.61.3), damit der ICoreWebView2Controller-Typ von PlatformWebview::controller()
# exakt passt. Kein Versionsbump — dieselben Crates, nur zusaetzlich als Direct-Dependency.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }
