[package]
name = "lataif"
version = "0.8.23"
description = "LATAIF — Luxury Trading Operating System"
authors = ["LATAIF"]
edition = "2021"

[lib]
name = "lataif_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MEDIA-04A-1 — pure-Rust image decode/encode for the guarded stock-image core.
# default-features disabled to avoid pulling GIF/BMP/TIFF/… encoders; only the
# three input formats we accept are enabled (output is always JPEG). The `webp`
# feature uses the pure-Rust `image-webp` crate — no native system dependency.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Sync server (embedded)
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.35", features = ["bundled"] }

# M6-B1 — Shared protocol core. Pulls ONLY the `lataif-server` LIBRARY target
# (migrations runner / protocol / money); the standalone `main.rs` binary is not
# a dependency target and is never linked into the desktop app. Deliberately the
# same rusqlite 0.35 "bundled" as above, so cargo unifies both to ONE crate and
# ONE bundled SQLite — verified via `cargo tree -d` (see M6-B1 report).
lataif-server = { path = "../server" }
jsonwebtoken = "9"
bcrypt = "0.17"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# LAN auto-discovery
mdns-sd = "0.13"
local-ip-address = "0.6"

# HTTPS fuer die Mobile-Seite (Live-Kamera braucht secure context) — selbst-signiert
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = "0.23"
argon2 = "0.5"
aes-gcm = "0.10"
ed25519-dalek = "2"
zeroize = "1"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
# M6-B2C4 — HMAC-SHA256 fuer den Target-Receipt, HKDF-SHA256 fuer die Versiegelung der
# Source-Secrets. Beide bauen auf `digest 0.10`, das sha2 bereits mitbringt.
hmac = "0.12"
hkdf = "0.12"

# M5-B — native WebView2-Reload-Bruecke (F5/Ctrl+R). Nur Windows. Bewusst auf die von wry
# bereits transitiv genutzten Versionen unifiziert (Cargo.lock pinnt webview2-com 0.38.2 /
# windows 0.61.3), damit der ICoreWebView2Controller-Typ von PlatformWebview::controller()
# exakt passt. Kein Versionsbump — dieselben Crates, nur zusaetzlich als Direct-Dependency.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }

# M6-B3A3 §2 — Router::oneshot for the raw-push-route runtime integration test. tower 0.5 is already
# resolved transitively via axum, and the `util` feature it needs is enabled by axum too, so this
# adds no new crate/version to Cargo.lock — it is only a dev-time handle to drive the REAL router
# in-process (same routes, same auth middleware, same DefaultBodyLimit) without opening a socket.
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
